--- a/style.css
+++ b/style.css
@@ -59,6 +59,75 @@ button {
     color: #fff;
 }
 
-.completed {
-    color: red;
+.todo-container {
+    padding: 0;
+}
+
+.todo-container .todo {
+    margin: 0 auto;
+    display: flex;
+    justify-content: end;
+    flex-direction: row;
+    background: #fff;
+    border-radius: 5px;
+
+
+}
+
+
+.todo-container .todo .completed {
+    width: 90%;
+    text-decoration: line-through;
+    color: #7e7e7e;
+    opacity: 0.7;
+}
+
+.todo-container button {
+    padding: 16px;
+    flex: 1;
+    margin: 0;
+}
+
+.todo-container .todo-check {
+    color: #05cf5b;
+    background: #fff;
+    border-left: 2px solid #fff;
+    font-size: 16px;
+
+
+}
+
+.todo-container .todo-check:hover {
+    color: #fff;
+    background: #05cf5b;
+    border-left: 2px solid #fff;
+    cursor: pointer;
+
+
+}
+
+.todo-container .todo-delete {
+    color: #ff5762;
+    background: #fff;
+    border-left: 2px solid #fff;
+    font-size: 16px;
+
+
+}
+
+.todo-container .todo-delete:hover {
+    color: #fff;
+    background: #ff5762;
+    border-left: 2px solid #fff;
+    cursor: pointer;
+
+}
+
+.todo-container .todo li {
+    flex: 10;
+    padding: 16px;
+    list-style-type: none;
+    margin: 0;
+    font-size: 14px;
+    line-height: 1.5;
 }
