--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background: linear-gradient(#00cc9c, #ff80d3);
     background-repeat: no-repeat;
     height: 100vh;
+    background-attachment: fixed;
     display: flex;
     justify-content: center;
     font-family: cursive;
@@ -61,6 +62,8 @@ button {
 
 .todo-container {
     padding: 0;
+    height: 45px;
+
 }
 
 .todo-container .todo {
@@ -69,23 +72,25 @@ button {
     justify-content: end;
     flex-direction: row;
     background: #fff;
-    border-radius: 5px;
+    margin-top: 1px;
+
 
 
 }
 
 
-.todo-container .todo .completed {
+.toggle {
     width: 90%;
     text-decoration: line-through;
     color: #7e7e7e;
-    opacity: 0.7;
+
 }
 
 .todo-container button {
     padding: 16px;
     flex: 1;
     margin: 0;
+
 }
 
 .todo-container .todo-check {
@@ -125,9 +130,9 @@ button {
 
 .todo-container .todo li {
     flex: 10;
-    padding: 16px;
+    padding: 6px;
     list-style-type: none;
     margin: 0;
     font-size: 14px;
-    line-height: 1.5;
+    /* line-height: 1.5; */
 }
