--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background: linear-gradient(#00cc9c, #ff80d3);
-    */ background-repeat: no-repeat;
+    background-repeat: no-repeat;
     height: 100vh;
     background-attachment: fixed;
     display: flex;
@@ -45,7 +45,7 @@ button {
     font-size: 15px;
     border-bottom-left-radius: 5px;
     border-top-left-radius: 5px;
-    width: 320px;
+    width: 420px;
 
 }
 
@@ -78,7 +78,7 @@ button {
     justify-content: end;
     flex-direction: row;
     background: #fff;
-    margin-top: 1px;
+    margin-top: 5px;
     width: 100%;
     /* margin: 20px; */
 
@@ -142,21 +142,16 @@ button {
     list-style-type: none;
     margin: 0;
     font-size: 14px;
+
+
     /* line-height: 1.5; */
+    overflow: hidden;
 }
 
 @media (max-width : 768px) {
-    .input-container {
-        margin-left: 60px;
-
-    }
-
-    .todo-container {
-        margin-left: 60px;
-
-    }
 
     .todo-container .todo {
         width: 100%;
     }
+
 }
